--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "description": "A simple chat client using socket.io",
   "main": "index.js",
-  "author": "Grant Timmerman",
+  "author": "Pablo Abenia",
   "private": true,
   "license": "BSD",
   "dependencies": {
     "express": "3.4.8",
-    "socket.io": "1.3.7"
+    "socket.io": "1.3.7",
+    "mysql": "2.10.2"
   }
 }
