--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,6 @@ RewriteRule ^jslib/chatvars\.js$ index.php?action=chatjs [L,QSA]
 RewriteRule ^Activity$ index.php?action=activity [L,QSA]
 RewriteRule ^([A-Za-z_]+)\.php$ index.php?action=$1 [L,QSA]
 RewriteRule ^([A-Za-z_]+)\.php?\(.*\)$ index.php?action=$1&$2 [L,QSA]
+
+RewriteRule ^ldshake\/ldsdoc\/([0-9]+)$ ldshake/save.php?document_id=$1
+RewriteRule ^ldshake\/ldsdoc\/([0-9]+)\/summary$ ldshake/summary.php?document_id=$1
